@@ -15,8 +15,8 @@ import Card from 'components/card';
 import ExtendedHeader from 'woocommerce/components/extended-header';
 import CarrierAccountListItem from './list-item';
 
-const CarrierAccounts = ({ translate, carriers = [] }) => {
-	if ( carriers.length === 0 ) {
+const CarrierAccounts = ({ translate, accounts = [] }) => {
+	if ( accounts.length === 0 ) {
 		return null;
 	}
 
@@ -30,20 +30,20 @@ const CarrierAccounts = ({ translate, carriers = [] }) => {
 				<div className="carrier-accounts__header">
 					<div className="carrier-accounts__header-icon" />
 					<div className="carrier-accounts__header-name">{ translate( 'Name' ) }</div>
-					{ some( carriers, 'account' ) && (
+					{ some( accounts, 'account' ) && (
 						<div className="carrier-accounts__header-credentials">{ translate( 'Credentials' ) }</div>
 					) }
 
 					<div className="carrier-accounts__header-actions" />
 				</div>
-				{ carriers.map( ( carrier, index ) => <CarrierAccountListItem key={index} data={carrier} /> ) }
+				{ accounts.map( ( account, index ) => <CarrierAccountListItem key={index} accountData={account} /> ) }
 			</Card>
 		</div>
 	);
 }
 
 CarrierAccounts.propTypes = {
-	carriers: PropTypes.arrayOf(
+	accounts: PropTypes.arrayOf(
 		PropTypes.shape( {
 			id: PropTypes.string,
 			carrier: PropTypes.string.isRequired,
